--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header>
     <nav>
       <div class="logo-container">
-        <img src="assets/logo.png" alt="Howling Vanguard logo" class="logo" />
+        <img src="assets/logo-header.png" alt="Howling Vanguard logo" class="logo" />
         <span>Howling Vanguard</span>
       </div>
       <ul>
@@ -39,7 +39,7 @@
       </div>
     </div>
     <div class="hero-image">
-      <img src="assets/hero-wolf.png" alt="Stylized howling wolf hero image" />
+      <img src="assets/hero-wolf-1920 (1).webp" alt="Stylized howling wolf hero image" />
     </div>
   </section>
 
