--- a/index.html
+++ b/index.html
@@ -1,105 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="AI automation services: Make.com workflows, AI agents, and chatbots to capture leads, reduce manual work, and increase revenue." />
-  <title>Howling Vanguard</title>
-  
-  <!-- Corrected CSS path -->
-  <link rel="stylesheet" href="assets/styles.css" />
+  <!-- Basics -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>AI Automation & Make.com Workflows for SMEs | Howling Vanguard</title>
+  <meta name="description" content="We build AI agents, Make.com workflows, and chatbots that capture leads, reduce busywork, and increase revenue. Fast implementation, clear ROI, and ongoing optimization." />
+  <link rel="canonical" href="https://www.howlingvanguard.com/" />
 
-  <!-- Favicon -->
-  <link rel="icon" href="assets/favicon.png" type="image/png" />
+  <!-- Icons (match your repo exactly) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png" />
+  <link rel="icon" href="assets/favicon.ico" />
+
+  <!-- Social (file name has a space, so we URL-encode it) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="AI Automation & Make.com Workflows for SMEs | Howling Vanguard" />
+  <meta property="og:description" content="AI agents, Make.com workflows, and chatbots that turn clicks into customers and automate the busywork." />
+  <meta property="og:image" content="https://www.howlingvanguard.com/assets/og-image%20(1).jpg" />
+  <meta property="og:url" content="https://www.howlingvanguard.com/" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- CSS (this is where your styles live right now) -->
+  <link rel="stylesheet" href="assets/styles.css" />
+  <!-- Keep this if you later add a root stylesheet
+  <link rel="stylesheet" href="styles.css" />
+  -->
 </head>
 <body>
-  <header>
-    <nav>
-      <div class="logo-container">
-        <img src="assets/logo-header.png" alt="Howling Vanguard logo" class="logo" />
-        <span>Howling Vanguard</span>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <!-- Header -->
+  <header class="site-header" role="banner">
+    <div class="container">
+      <a class="brand" href="/" aria-label="Howling Vanguard home">
+        <img src="assets/logo-header.png" width="36" height="36" alt="Howling Vanguard logo" decoding="async" />
+        <span class="brand-name">Howling Vanguard</span>
+      </a>
+      <nav class="primary-nav" aria-label="Primary">
+        <a href="#services">Services</a>
+        <a href="#process">Our Process</a>
+        <a href="#results">Results</a>
+        <a href="booking.html">Book a Call</a>
+      </nav>
+      <div class="header-cta">
+        <a class="btn btn-primary" href="https://calendly.com/djvbusiness10/30min" rel="noopener" target="_blank">Get a Free Audit</a>
       </div>
-      <ul>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#process">Our Process</a></li>
-        <li><a href="#results">Results</a></li>
-        <li><a href="#contact">Book a Call</a></li>
-      </ul>
-      <a href="#audit" class="cta-btn">Get a Free Audit</a>
-    </nav>
+    </div>
   </header>
 
-  <section class="hero">
-    <div class="hero-text">
-      <h1>Turn clicks into customers with AI automation</h1>
-      <p>We design AI agents, Make.com workflows, and chatbots that capture leads, cut manual work, and increase revenue. Ship fast. Iterate faster.</p>
-      <div class="hero-buttons">
-        <a href="#audit" class="primary-btn">Get a Free Audit</a>
-        <a href="#services" class="secondary-btn">See What We Automate</a>
+  <!-- Hero -->
+  <section class="hero" id="hero">
+    <div class="container grid-2">
+      <div class="hero-copy">
+        <h1>Turn clicks into customers with AI automation</h1>
+        <p class="lead">
+          We design AI agents, Make.com workflows, and chatbots that capture leads, cut manual work, and increase revenue. Ship fast. Iterate faster.
+        </p>
+        <div class="cta-row">
+          <a class="btn btn-primary" href="https://calendly.com/djvbusiness10/30min" rel="noopener" target="_blank">Get a Free Audit</a>
+          <a class="btn btn-ghost" href="#services">See What We Automate</a>
+        </div>
+        <ul class="trust-points">
+          <li>Make.com + OpenAI experts</li>
+          <li>Clear ROI focus</li>
+          <li>Done-for-you implementation</li>
+        </ul>
+      </div>
+      <div class="hero-media">
+        <picture>
+          <!-- WebP sources (URL-encode the space in filenames) -->
+          <source type="image/webp" srcset="
+            assets/hero-wolf-640%20(1).webp 640w,
+            assets/hero-wolf-960%20(1).webp 960w,
+            assets/hero-wolf-1280%20(1).webp 1280w,
+            assets/hero-wolf-1600%20(1).webp 1600w,
+            assets/hero-wolf-1920%20(1).webp 1920w,
+            assets/hero-wolf-2400%20(1).webp 2400w" sizes="(max-width: 1200px) 100vw, 560px">
+          <!-- JPEG fallback -->
+          <img src="assets/og-image%20(1).jpg" alt="Stylized howling wolf hero image" loading="eager" decoding="async" width="560" height="380">
+        </picture>
       </div>
     </div>
-    <div class="hero-image">
-      <img src="assets/hero-wolf-1920 (1).webp" alt="Stylized howling wolf hero image" />
+  </section>
+
+  <main id="main">
+    <!-- Services -->
+    <section id="services" class="section">
+      <div class="container">
+        <h2>Services that move the needle</h2>
+        <div class="cards">
+          <article class="card">
+            <h3>Lead Capture & Nurture</h3>
+            <p>Multi-step forms, CRM enrichment, and automated email/SMS follow-ups that convert visitors into booked calls.</p>
+            <ul>
+              <li>Web → CRM syncing</li>
+              <li>Duplicate lead prevention</li>
+              <li>48-hour follow-ups & reminders</li>
+            </ul>
+          </article>
+          <article class="card">
+            <h3>AI Agents & Chatbots</h3>
+            <p>On-site assistants trained on your FAQs and offers to qualify leads and handle common questions 24/7.</p>
+            <ul>
+              <li>FAQ ingestion & routing</li>
+              <li>Calendar hand-off</li>
+              <li>Conversation analytics</li>
+            </ul>
+          </article>
+          <article class="card">
+            <h3>Ops Automation</h3>
+            <p>Make.com workflows that eliminate repetitive tasks: data entry, notifications, document generation, and more.</p>
+            <ul>
+              <li>CRM ↔ Sheets sync</li>
+              <li>Slack/Email alerts</li>
+              <li>Contracts & invoices</li>
+            </ul>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- Process -->
+    <section id="process" class="section alt">
+      <div class="container">
+        <h2>Our process</h2>
+        <ol class="steps">
+          <li><strong>Discovery (15 min)</strong> — Understand your goals and quick wins.</li>
+          <li><strong>Blueprint</strong> — We map the workflow and KPIs.</li>
+          <li><strong>Build</strong> — Implement automations and test edge cases.</li>
+          <li><strong>Launch & Iterate</strong> — Measure, optimize, and scale.</li>
+        </ol>
+        <a class="btn btn-primary" href="https://calendly.com/djvbusiness10/30min" target="_blank" rel="noopener">Book Discovery Call</a>
+      </div>
+    </section>
+
+    <!-- Results -->
+    <section id="results" class="section">
+      <div class="container">
+        <h2>Results to expect</h2>
+        <div class="bullets">
+          <div class="bullet"><strong>+20–40%</strong> more qualified leads (better capture + follow-ups)</div>
+          <div class="bullet"><strong>10–30 hrs/mo</strong> saved from repetitive tasks</div>
+          <div class="bullet"><strong>Faster response</strong> with AI chat & routing</div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- CTA -->
+  <section class="cta section alt">
+    <div class="container center">
+      <h2>Ready to automate growth?</h2>
+      <p>Get a free audit: we’ll identify quick wins and give you a simple roadmap.</p>
+      <a class="btn btn-primary" href="https://calendly.com/djvbusiness10/30min" target="_blank" rel="noopener">Get a Free Audit</a>
     </div>
   </section>
 
-  <section id="services">
-    <h2>Services that move the needle</h2>
-    <div class="service-card">
-      <h3>Lead Capture & Nurture</h3>
-      <ul>
-        <li>Web → CRM syncing</li>
-        <li>Duplicate lead prevention</li>
-        <li>48-hour follow-ups & reminders</li>
-      </ul>
+  <!-- Footer -->
+  <footer class="site-footer">
+    <div class="container footer-grid">
+      <div>
+        <strong>Howling Vanguard</strong><br />
+        <a href="mailto:djvbusiness10@gmail.com">djvbusiness10@gmail.com</a><br />
+        <a href="tel:+381631010995">+381 63 101 0995</a>
+      </div>
+      <nav aria-label="Footer">
+        <a href="privacy.html">Privacy</a>
+        <a href="terms.html">Terms</a>
+        <a href="booking.html">Booking</a>
+      </nav>
+      <div class="copyright">
+        © <span id="year"></span> Howling Vanguard. All rights reserved.
+      </div>
     </div>
-    <div class="service-card">
-      <h3>AI Agents & Chatbots</h3>
-      <ul>
-        <li>FAQ ingestion & routing</li>
-        <li>Calendar hand-off</li>
-        <li>Conversation analytics</li>
-      </ul>
-    </div>
-    <div class="service-card">
-      <h3>Ops Automation</h3>
-      <ul>
-        <li>CRM ↔ Sheets sync</li>
-        <li>Slack/Email alerts</li>
-        <li>Contracts & invoices</li>
-      </ul>
-    </div>
-  </section>
-
-  <section id="process">
-    <h2>Our process</h2>
-    <ol>
-      <li><strong>Discovery (15 min)</strong> — Understand your goals and quick wins.</li>
-      <li><strong>Blueprint</strong> — Map the workflow and KPIs.</li>
-      <li><strong>Build</strong> — Implement automations and test edge cases.</li>
-      <li><strong>Launch & Iterate</strong> — Measure, optimize, and scale.</li>
-    </ol>
-    <a href="#contact" class="primary-btn">Book Discovery Call</a>
-  </section>
-
-  <section id="results">
-    <h2>Results to expect</h2>
-    <ul>
-      <li>+20–40% more qualified leads (better capture + follow-ups)</li>
-      <li>10–30 hrs/mo saved from repetitive tasks</li>
-      <li>Faster response with AI chat & routing</li>
-    </ul>
-  </section>
-
-  <section id="audit" class="cta-section">
-    <h2>Ready to automate growth?</h2>
-    <p>Get a free audit: we’ll identify quick wins and give you a simple roadmap.</p>
-    <a href="#contact" class="primary-btn">Get a Free Audit</a>
-  </section>
-
-  <footer>
-    <p>© Howling Vanguard. All rights reserved.</p>
-    <a href="privacy.html">Privacy</a>
   </footer>
+
+  <!-- Scripts: use the copies that currently live in /assets -->
+  <script defer src="assets/script.js"></script>
+  <script defer src="assets/main.js"></script>
 </body>
 </html>
