--- a/index.html
+++ b/index.html
@@ -8,26 +8,25 @@
   <meta name="description" content="We build AI agents, Make.com workflows, and chatbots that capture leads, reduce busywork, and increase revenue. Fast implementation, clear ROI, and ongoing optimization." />
   <link rel="canonical" href="https://www.howlingvanguard.com/" />
 
-  <!-- Icons (match your repo exactly) -->
+  <!-- Icons (match your repo) -->
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png" />
   <link rel="icon" href="assets/favicon.ico" />
 
-  <!-- Social (file name has a space, so we URL-encode it) -->
+  <!-- Social (filename has a space) -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="AI Automation & Make.com Workflows for SMEs | Howling Vanguard" />
   <meta property="og:description" content="AI agents, Make.com workflows, and chatbots that turn clicks into customers and automate the busywork." />
-  <meta property="og:image" content="https://www.howlingvanguard.com/assets/og-image%20(1).jpg" />
+  <meta property="og:image" content="assets/og-image%20(1).jpg" />
   <meta property="og:url" content="https://www.howlingvanguard.com/" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <!-- CSS (this is where your styles live right now) -->
-  <link rel="stylesheet" href="assets/styles.css" />
-  <!-- Keep this if you later add a root stylesheet
+  <!-- CSS: load base first, then extras -->
   <link rel="stylesheet" href="styles.css" />
-  -->
+  <link rel="stylesheet" href="assets/styles.css" />
 </head>
+
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
 
@@ -177,8 +176,8 @@
     </div>
   </footer>
 
-  <!-- Scripts: use the copies that currently live in /assets -->
-  <script defer src="assets/script.js"></script>
+  <!-- Scripts -->
+  <script defer src="script.js"></script>
   <script defer src="assets/main.js"></script>
 </body>
 </html>
