--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
   <!-- Basics -->
   <meta charset="utf-8" />
@@ -8,13 +6,13 @@
   <meta name="description" content="We build AI agents, Make.com workflows, and chatbots that capture leads, reduce busywork, and increase revenue. Fast implementation, clear ROI, and ongoing optimization." />
   <link rel="canonical" href="https://www.howlingvanguard.com/" />
 
-  <!-- Icons (match your repo) -->
+  <!-- Icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png" />
   <link rel="icon" href="assets/favicon.ico" />
 
-  <!-- Social (filename has a space) -->
+  <!-- Social -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="AI Automation & Make.com Workflows for SMEs | Howling Vanguard" />
   <meta property="og:description" content="AI agents, Make.com workflows, and chatbots that turn clicks into customers and automate the busywork." />
@@ -22,10 +20,10 @@
   <meta property="og:url" content="https://www.howlingvanguard.com/" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <!-- CSS: load base first, then extras -->
-  <link rel="stylesheet" href="styles.css" />
+  <!-- CSS -->
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
+
 
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
