--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <!-- Basics -->
   <meta charset="utf-8" />
@@ -23,7 +25,6 @@
   <!-- CSS -->
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
-
 
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
@@ -67,7 +68,6 @@
       </div>
       <div class="hero-media">
         <picture>
-          <!-- WebP sources (URL-encode the space in filenames) -->
           <source type="image/webp" srcset="
             assets/hero-wolf-640%20(1).webp 640w,
             assets/hero-wolf-960%20(1).webp 960w,
@@ -75,7 +75,6 @@
             assets/hero-wolf-1600%20(1).webp 1600w,
             assets/hero-wolf-1920%20(1).webp 1920w,
             assets/hero-wolf-2400%20(1).webp 2400w" sizes="(max-width: 1200px) 100vw, 560px">
-          <!-- JPEG fallback -->
           <img src="assets/og-image%20(1).jpg" alt="Stylized howling wolf hero image" loading="eager" decoding="async" width="560" height="380">
         </picture>
       </div>
@@ -164,8 +163,8 @@
         <a href="tel:+381631010995">+381 63 101 0995</a>
       </div>
       <nav aria-label="Footer">
-        <a href="privacy.html">Privacy</a>
-        <a href="terms.html">Terms</a>
+        <a href='/privacy'>Privacy</a>
+        <a href='/terms'>Terms</a>
         <a href="booking.html">Booking</a>
       </nav>
       <div class="copyright">
